--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,3 +41,7 @@
     "vendor/font-awesome/solid",
     "vendor/font-awesome/brands"
 ;
+/* Increase gap between sidebar and content */
+.page__content {
+  padding-left: 10px;
+}
