--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -42,6 +42,6 @@
     "vendor/font-awesome/brands"
 ;
 /* Increase gap between sidebar and content */
-.page__content {
-  padding-left: 10px;
+.sidebar {
+  padding-right: 10px;
 }
